# rust-s3-uploader

./: .env.example  Cargo.toml
src/: main.rs
